--- a/config.yaml
+++ b/config.yaml
@@ -14,7 +14,7 @@ gpt_neox_training:
   strings_per_sequence: 10
 
 generator:
-  num_outputs: 10
+  num_outputs: 1000000
   batch_size: 250
   top_k: 950
   top_p: 0.85
