--- a/config.yaml
+++ b/config.yaml
@@ -14,11 +14,11 @@ gpt_neox_training:
   strings_per_sequence: 10
 
 generator:
-  num_outputs: 1000000
+  num_outputs: 100
   batch_size: 250
-  top_k: 950
+  top_k: 10
   top_p: 0.85
   temperature: 0.80
-  penalty_alpha: 0.0
+  penalty_alpha: 0.6
   max_temperature: 1.2
   strings_per_sequence: 10
