--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "ipykernel>=6.29.5",
     "pandas>=2.2.3",
     "tensorboard>=2.19.0",
     "tokenizers>=0.21.1",
+    "torch>=2.7.0",
     "tqdm>=4.67.1",
     "transformers>=4.52.4",
 ]
