--- a/config_1.yaml
+++ b/config_1.yaml
@@ -14,12 +14,12 @@ gpt_neox_training:
   strings_per_sequence: 10
 
 generator:
-  num_outputs: 1
-  batch_size: 50
+  num_outputs: 1000000
+  batch_size: 100
   top_k: 10
   top_p: 0.85
   temperature: 0.80
   penalty_alpha: 0.6
   max_temperature: 1.2
   strings_per_sequence: 10
-  sbs_k: 1
+  sbs_k: 3
